# bitchat-rust

./: .gitignore  ANDROID_ANR_FIXES.md  BITCRAPS_SDK_V2_SUMMARY.md  BUILD.md  BUILD_HEALTH_IMPROVEMENTS.md  BUILD_SUCCESS_REPORT.md  CLAUDE.md  CODEX_FINAL_STATUS.md  CODEX_IMPLEMENTATION_REPORT.md  CODE_REVIEW_FINAL_SUMMARY.md  COMPILATION_FIXES_FINAL_REPORT.md  CONSENSUS_IMPLEMENTATION.md  CRITICAL_FIXES_IMPLEMENTED.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.gateway  Dockerfile.production  EFFICIENCY_REPORT.md  EFFICIENT_GAME_LOGIC.md  ERROR_MODULE_IMPROVEMENTS.md  EVALUATION_REPORT.md  FEYNMAN_CONTENT_MIGRATION_PLAN.md  FEYNMAN_WALKTHROUGH_VERIFICATION_REPORT.md  FINAL_REVIEW_REPORT.md  FIX_VERIFICATION_REPORT.md  GPU_ACCELERATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_2025.md  IMPLEMENTATION_TASKS.md  LICENSE  LOOP_BUDGET_SOLUTION_REPORT.md  M6_SDK_MOBILE_COMPLETION_REPORT.md  M7_M8_CRITICAL_REVIEW.md  M7_M8_FIXES_COMPLETE.md  M7_M8_IMPLEMENTATION_FIXES.md  MOBILE_PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT.md  (+47 more)
.github/: WORKFLOWS_OVERVIEW.md
android/: ANDROID_VALIDATION_SUMMARY.md  build.gradle  gradle.properties  settings.gradle  test_build.sh
android/jni_bridge/: Cargo.toml
android/jni_bridge/src/: lib.rs
benches/: broadcast_latency_bench.rs  comprehensive_benchmarks.rs  optimization_benchmarks.rs  performance.rs  performance.rs.disabled  performance_optimizations.rs  production_benchmarks.rs  protocol_benchmarks.rs  protocol_benchmarks.rs.disabled  real_performance_benchmarks.rs  simple_optimization_benchmarks.rs  working_benchmarks.rs
config/: development.toml
docs/: ACTUAL_PROJECT_STATUS.md  AGENT_REVIEW_AND_FIXES_FINAL.md  AGENT_REVIEW_SUMMARY.md  ANDROID_14_COMPATIBILITY_ANALYSIS.md  ANDROID_GO_NO_GO_RECOMMENDATION.md  API_DOCUMENTATION.md  APP_STORE_COMPLIANCE_GUIDE.md  ARCHITECTURE.md  AUDIT_IMPLEMENTATION_SUMMARY.md  BRIDGE_USAGE_GUIDE.md  BUILD_MATRIX.md  CI_BUILD_MATRIX.md  CODE_REVIEW_REPORT.md  COMPILATION_FIXES.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TESTING_STRATEGY.md  CRITICAL_AUDIT_FINDINGS.md  CRITICAL_FIXES_IMPLEMENTED.md  CRITICAL_FIXES_SUMMARY.md  CRITICAL_FIX_PLAN.md  CRITICAL_GAPS_ADDRESSED.md  CRITICAL_REVIEW_FINDINGS.md  CROSS_CHAIN_BRIDGE_ARCHITECTURE.md  CROSS_PLATFORM_UI_DESIGN_SYSTEM.md  DATABASE_MIGRATION_SYSTEM.md  DEVELOPMENT_PRIORITIES.md  DEVELOPMENT_PROGRESS_UPDATE.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS_SUMMARY.md  ENGINEERINGREVIEW.md  FEYNMAN_LEARNING_GUIDE.md  FEYNMAN_OPTIMIZATION_RECOMMENDATIONS.md  FINAL_AUDIT_READY_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEPENDENT_REVIEW_SUMMARY.md  INFRASTRUCTURE_DEVOPS_IMPLEMENTATION_PLAN.md  ITERATION_COMPLETE_AUDIT_READY.md  KUBERNETES_DEPLOYMENT_GUIDE.md  MASTER_DEVELOPMENT_PLAN.md  (+51 more)
examples/: anti_cheat_demo.rs  basic_consensus.rs  battery_optimization_demo.rs  ble_peripheral_demo.rs  cross_layer_integration.rs  cross_layer_simple.rs  database_scaling_example.rs  efficient_demo.rs  error_usage.rs  full_integration_demo.rs  full_integration_simple.rs  gateway_load.rs  gateway_ws_subscribe.rs  loop_budget_demo.rs  memory_comparison.rs  mesh_network.rs  mesh_network_simple.rs  microservices_demo.rs  mobile_sdk_example.rs  peer_discovery_demo.rs  performance_optimization_demo.rs  sdk_quickstart.rs  sdk_v2_comprehensive_demo.rs  sdk_verify_randomness.rs  system_monitoring_demo.rs  tui_demo.rs  week2_test.rs  week2_test.rs.disabled  week3_demo.rs  week3_demo.rs.disabled  week3_simple_demo.rs  week3_simple_demo.rs.disabled
feynman/: 00_TABLE_OF_CONTENTS.md  00_TABLE_OF_CONTENTS_CONSOLIDATED.md  01_error_module.md  02_config_module.md  03_lib_rs.md  04_crypto_mod.md  05_crypto_encryption.md  06_crypto_safe_arithmetic.md  07_crypto_random.md  08_crypto_secure_keystore.md  09_crypto_simd.md  100_the_complete_bitcraps_system.md  104_error_recovery_mechanisms.md  105_integration_testing_strategies.md  108_state_synchronization_protocols.md  10_protocol_mod.md  110_peer_discovery_mechanisms.md  11_database_systems.md  12_transport_layer.md  13_mesh_networking.md  14_consensus_algorithms.md  15_monitoring_observability.md  16_token_economics.md  17_validation_input_sanitization.md  18_caching_performance.md  19_consensus_engine.md  20_consensus_validation.md  21_lockfree_consensus.md  22_merkle_cache.md  23_consensus_persistence.md  24_efficient_consensus.md  25_optimized_binary.md  26_compact_state.md  27_treasury_management.md  28_protocol_versioning.md  29_gaming_craps_rules.md  30_multi_game_framework.md  31_bluetooth_transport.md  32_tui_casino.md  33_kademlia_dht.md  (+79 more)
fix-todos/: plan.md  state.json
k8s/: deployment.yaml  gateway-nodes.yaml  jaeger.yaml  monitoring-stack.yaml  namespace.yaml  prometheus-alerts.yaml
kubernetes/: configmaps.yaml  deploy-secrets.sh  deployments.yaml  hpa.yaml  namespaces.yaml  networkpolicies.yaml  secrets.yaml  serviceaccounts.yaml  services.yaml  storage.yaml
migrations/: V001__initial_schema.sql  V002__peer_connections.sql  V003__consensus_tracking.sql  V004__game_analytics.sql  V005__audit_logging.sql  V006__performance_indexes.sql
monitoring/: README.md  prometheus-rules.yaml
scripts/: build-assets.sh  build_mobile.sh  ci-validate.sh  coverage.sh  deploy-cdn.sh  deploy-production.sh  deploy.sh  generate_bindings.sh  validate_mobile_sdk.sh
security/: security-policies.yaml
src/: app.rs  app_config.rs  app_state.rs  bitcraps.udl  bitcraps_mobile.udl  bitcraps_simple.udl  commands.rs  error.rs  lib.rs  main.rs  memory_pool.rs  persistence.rs  protocol_randomness.rs
terraform/: eks.tf  main.tf  variables.tf  vpc.tf
tests/: adversarial_consensus_test.rs  basic_end_to_end_tests.rs  bridge_integration_test.rs  comprehensive_integration_audit_test.rs  comprehensive_integration_test.rs  comprehensive_p2p_game_flow_test.rs  concurrent_player_joins_test.rs  consensus_test.rs  cross_platform_tests.rs  database_comprehensive_test.rs  database_integration_test.rs  lib.rs  (+16 more)
(+994 files in other folders)
