[package]
name = "bitcraps"
version = "0.1.0"
edition = "2021"
authors = ["BitCraps Team <dev@bitcraps.org>"]
description = "Decentralized craps casino over Bluetooth mesh with CRAP tokens"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
byteorder = "1.5"
lz4_flex = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
crossbeam-channel = "0.5"

# Cryptography
snow = "0.10.0"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
x25519-dalek = "2.0"
rand = "0.8"
getrandom = "0.2"
fastrand = "2.0"
sha2 = "0.10"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hmac = "0.12"
pbkdf2 = "0.12"
hkdf = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.6"

# Bluetooth transport
btleplug = "0.11"
once_cell = "1.20"

# UniFFI for cross-platform bindings
uniffi = { version = "0.28", features = ["build"], optional = true }

# Android JNI bindings
jni = { version = "0.21", optional = true }
android_logger = { version = "0.14", optional = true }

# Database and storage
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tokio-rusqlite = "0.6"

# Efficient data structures
rustc-hash = "2.0"
lru = "0.12"
dashmap = "6.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
bitvec = "1.0"
memmap2 = "0.9"

# Concurrency and parallelism
crossbeam-epoch = "0.9"
parking_lot = "0.12"
rayon = "1.10"

# Compression
flate2 = "1.0"
zstd = "0.13"
brotli = "7.0"

# UI dependencies
ratatui = "0.29.0"
crossterm = "0.29.0"
clap = { version = "4.5.45", features = ["derive", "cargo"] }

# Utilities
dirs = "5.0"
log = "0.4"
regex = "1.11"
chrono = { version = "0.4.41", features = ["serde"] }
lazy_static = "1.5"
hex = "0.4"
bincode = "1.3"
serde_json = "1.0"
toml = "0.8"
num_cpus = "1.16"
serde_bytes = "0.11"
blake3 = "1.5"
crc32fast = "1.4"
rand_chacha = "0.3"
env_logger = "0.11"
warp = "0.3"
prometheus = "0.13"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"], optional = true }

# Android JNI integration
[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", features = ["invocation"] }
android_logger = "0.14"
ndk = "0.8"
ndk-context = "0.1"

# Linux D-Bus integration for BlueZ
[target.'cfg(target_os = "linux")'.dependencies]
# Note: In a real implementation, you would add D-Bus libraries here:
# zbus = { version = "4.0", features = ["tokio"] }
# or
# dbus = "0.9"
# For now, we're using placeholder implementations

# iOS/macOS Core Bluetooth FFI (when available)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
# Note: In a real implementation, you would add FFI bindings here:
# cocoa = "0.24"
# objc = "0.2"  
# core-foundation = "0.9"
# For now, we're using placeholder implementations

# Windows system monitoring
[target.'cfg(target_os = "windows")'.dependencies]
# Windows Performance Data Helper (PDH) for system metrics
# winapi = { version = "0.3", features = ["pdh", "sysinfoapi", "winbase"] }
# windows-sys = { version = "0.52", features = ["Win32_System_Performance", "Win32_System_SystemInformation"] }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"
tempfile = "3.14"
tokio-test = "0.4"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "working_benchmarks"
harness = false

[[bench]]
name = "real_performance_benchmarks"
harness = false

# Android library configuration
[lib]
name = "bitcraps"
crate-type = ["cdylib", "staticlib", "rlib"]

# Android targets
[package.metadata.android]
package_name = "com.bitcraps.lib"
lib_name = "bitcraps"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[features]
default = []
benchmarks = []
physical_device_tests = []
uniffi = ["dep:uniffi"]
android = ["dep:jni", "dep:android_logger"]

[profile.dev]
opt-level = 0
debug = true
