[package]
name = "bitcraps-android-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "bitcraps_jni"

[dependencies]
jni = "0.21"
bitcraps = { path = "../.." }
tokio = { version = "1.38", features = ["rt", "sync"] }
log = "0.4"
android_logger = "0.13"
chacha20poly1305 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
uuid = "1.8"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.8"
ndk-sys = "0.5"
ndk-context = "0.1"